package org.example.Tema6.Practica1;

public class AppEcommerce {
    public static void main(String[] args) {
        Tienda.iniciarPago();
    }
}
