package org.example.Tema6.Practica1;

abstract class MetodoPago {
    abstract void procesarPago(double importe);
}
